fix: refactor Header component layout and styling for improved readability and consistency

--- a/app/Components/Header/header.module.css
+++ b/app/Components/Header/header.module.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Montserrat;
-  src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 }
 
 .generalDiv {
@@ -8,94 +8,51 @@
   position: fixed;
   top: 0;
   width: 100%;
-  justify-content: space-between;
   display: flex;
-  font-family: 'Montserrat';
-}
-
-.align {
-  position: absolute;
-  left: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5em 1em;
+  font-family: "Montserrat", sans-serif;
+  z-index: 1000; 
 }
 
 .titleSenai {
   font-size: 1rem;
   color: #ffffff;
-  margin-left: 1em;
+  margin-right: 1em;
+  font-weight: bold;
 }
 
 .menu {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-right: 1em;
-  font-size: 1rem;
+  gap: 0.5em;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.align {
-  position: absolute;
-  left: 0;
-}
-
-.titleSenai {
-  font-size: 1rem;
+#senai,
+.links {
   color: #ffffff;
-  margin-left: 1em;
-}
-
-.menu {
+  text-decoration: none;
+  padding: 0.5em;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-right: 1em;
-  font-size: 1rem;
-  list-style: none;
+  justify-content: center;
+}
+
+#senai:hover,
+.links:hover {
+  border-radius: 8px;
+  background-color: rgb(200, 0, 0);
+  transition: background-color 0.2s ease-in-out;
 }
 
 .barra {
   color: #ffffff;
-  font-weight: 600;
-}
-
-#senai {
-  padding: 0.5rem;
-  margin: 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  text-decoration: none;
-}
-
-#senai:hover {
-  border-radius: 8px;
-  background-color: rgb(200, 0, 0);
-  transition: 0.2s ease-in-out;
-}
-
-.links {
-  padding: 0.5rem;
-  margin: 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.iconSocial::before {
-  content: "|";
-  font-size: 1rem;
-  position: absolute;
-  left: 0;
-  top: -3px;
-}
-
-.links:hover {
-  border-radius: 8px;
-  background-color: rgb(200, 0, 0);
-  transition: 0.2s ease-in-out;
+  font-weight: 800;
+  padding: 0 0.5em;
 }
 
 @media screen and (max-width: 768px) {
@@ -106,5 +63,4 @@
   #senai {
     font-size: 18px;
   }
-
 }
